RESOLVED FIXED200288
Fix 64-bit vs 32-bit mismatch in PersistentCoders.h
https://bugs.webkit.org/show_bug.cgi?id=200288
Summary Fix 64-bit vs 32-bit mismatch in PersistentCoders.h
Keith Rollin
Reported 2019-07-30 16:33:06 PDT
hashMapSize is declared as a uint64_t. It is passed to HashMapType::reserveInitialCapacity, which takes an unsigned int. This is a 32-bit value on 32-bit platforms, leading to a compile time error. Fix his by casting hashMapSize to the expected type.
Attachments
Patch (1.62 KB, patch)
2019-07-30 16:34 PDT, Keith Rollin
no flags
Radar WebKit Bug Importer
Comment 1 2019-07-30 16:33:18 PDT
Keith Rollin
Comment 2 2019-07-30 16:34:32 PDT
WebKit Commit Bot
Comment 3 2019-07-31 09:27:02 PDT
Comment on attachment 375195 [details] Patch Clearing flags on attachment: 375195 Committed r248044: <https://trac.webkit.org/changeset/248044>
WebKit Commit Bot
Comment 4 2019-07-31 09:27:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.