Fix 64-bit vs 32-bit mismatch in PersistentCoders.h https://bugs.webkit.org/show_bug.cgi?id=200288 <rdar://problem/53734203>

Reviewed by Chris Dumez.

hashMapSize is declared as a uint64_t. It is passed to
HashMapType::reserveInitialCapacity, which takes an unsigned int. This
is a 32-bit value on 32-bit platforms, leading to a compile time
error. Fix his by casting hashMapSize to the expected type.

* wtf/persistence/PersistentCoders.h:


Canonical link: https://commits.webkit.org/214091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248044 268f45cc-cd09-0410-ab3c-d52691b4dbfc